# C2DS-esp32-coop-controller

./: .gitattributes  .gitmodules  CMakeLists.txt  Kconfig  README.md  partitions.csv  sdkconfig  sdkconfig.default  sdkconfig.default.old  sdkconfig.farm  sdkconfig.old
.github/workflows/: mqtt-ota-reload.yml
iot-event-model/: sample_heartbeat.json  sample_message.json
main/: CMakeLists.txt  door_sensors.c  door_sensors.h  heartbeat.c  heartbeat.h  idf_component.yml  led.c  led.h  logger.c  logger.h  main.c  main.h  mqtt.c  mqtt.h  ota.c  ota.h  sensors.c  sensors.h  state_handler.c  wifi.c
main/.github/workflows/: mqtt-ota-reload.yml
main/certs/: chicken_coop_door_controller_certificate_pem_crt.c  chicken_coop_door_controller_private_pem_key.c  chicken_coop_door_controller_public_pem_key.c  esp_insights_auth_key.c
main/certs/original/: chicken-coop-door-controller-certificate.pem.crt  chicken-coop-door-controller-private.pem.key  chicken-coop-door-controller-public.pem.key
main/certs/policies/: iot-core-policy-LWT.json  iot-core-policy.json
scripts/: convert_certs_to_c.sh  enable_cloudwatch_alarms.sh
test/: init_ota_transfer.sh  send_coop_door_status.sh
